# demo-quoting

./: .env.example  README.md  package-lock.json  package.json
app/components/: ExportActions.tsx  GeminiChat.tsx  ModelSelector.tsx
app/routes/: home.tsx
app/utils/: aiExtractionUtils.ts  aiQuotingUtils.ts  excelUtils.ts  geminiApi.ts
fastapi/: pyproject.toml
vite-project/: package-lock.json  package.json
vite-project/app/components/: GeminiChat.tsx  icons.tsx
vite-project/app/hooks/: useGemini.ts
vite-project/app/routes/: home.tsx
vite-project/app/utils/: aiExtractionUtils.ts  aiQuotingUtils.ts  excelUtils.ts  geminiApi.ts
