[project]
authors = [{ name = "Adrian Sanchez Albanell", email = "sanchez.albanell.adrian@gmail.com" }]
name = "demo-quoting"
version = "0.1.0"
description = "Automatic quoting demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "ruff>=0.14.9",
]
